# Task-Manager-Agent

./: README.md  main.py  pyproject.toml  requirements.txt
agent/: graph.py
generated_project/: index.html  script.js  style.css
